--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
-
 {
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0"
+    "@expo/vector-icons": "^13.0.0",
+    "expo-image-picker": "^14.1.1"
   }
 }
